// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Secret Create reducers and actions should match snapshot for CreateFailed Action 1`] = `
Object {
  "error": true,
  "isLoading": false,
  "message": "CREATE FAILED",
  "publicKey": null,
  "success": false,
}
`;

exports[`Secret Create reducers and actions should match snapshot for CreateNewKeyPair 1`] = `
Object {
  "error": false,
  "isLoading": false,
  "message": "",
  "publicKey": null,
  "success": false,
}
`;

exports[`Secret Create reducers and actions should match snapshot for CreateSuccess Action 1`] = `
Object {
  "error": false,
  "isLoading": false,
  "message": "CREATE SUCCESS",
  "publicKey": null,
  "success": true,
}
`;
